--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,229 +6,6 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: ss
-    server: usshs2.gophers.gay
-    port: 20800
-    password: f5d95005-be14-40fc-bedc-e4a1133a5701
-    cipher: chacha20-ietf-poly1305
-  - &id002
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 216.52.183.243
-    port: 1001
-    password: 83XvX4Vo%*3a
-    cipher: aes-128-gcm
-    plugin: v2ray-plugin
-    plugin-opts:
-      mode: websocket
-      path: /
-      mux: true
-  - &id003
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: vmess
-    server: 09.kccic2pa.xyz
-    port: 50009
-    cipher: auto
-    uuid: 66a5e5f4-4d18-474a-ad2d-3f11e09058e9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id004
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 5.161.191.195
-    port: 2083
-    cipher: auto
-    uuid: 1c5cd450-a5cc-4803-d0ef-1ea424cc4ba2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id005
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 162.159.143.72
-    port: 80
-    cipher: auto
-    uuid: fab552f9-3c92-44ed-c086-08d631ee44ee
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: xui2.xuwu996.eu.org
-  - &id006
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 45.199.138.191
-    port: 30000
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1696251522438
-      headers:
-        host: www.42077230.xyz
-  - &id007
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: 17.kccic2pa.xyz
-    port: 50017
-    cipher: auto
-    uuid: 66a5e5f4-4d18-474a-ad2d-3f11e09058e9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: ss
-    server: fs.xianyuwangluo.cyou
-    port: 27207
-    password: 5b6b0f61-f1a8-4e63-88ca-f0f6d79a1bc3
-    cipher: chacha20-ietf-poly1305
-  - &id009
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: ss
-    server: foshan.chiguayun.cc
-    port: 27140
-    password: 4cf75408-967d-41c4-bf89-80517807e26f
-    cipher: chacha20-ietf-poly1305
-  - &id010
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
-    type: vmess
-    server: 104.20.142.55
-    port: 2052
-    cipher: auto
-    uuid: e37c2a6b-db4d-4ce0-8781-284d1c332134
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /public?ed=2048
-      headers:
-        host: de2.biqibao.site
-  - &id011
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: ns1.v2-vip.fun
-    port: 80
-    cipher: auto
-    uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id012
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: cf-lt.sharecentre.online
-    port: 80
-    cipher: auto
-    uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v006.ssrsub.com
-  - &id013
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 67.21.90.5
-    port: 443
-    cipher: auto
-    uuid: 28dd6c26-05a5-4bba-8a5d-052b70ac13b2
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1694429908748
-      headers:
-        host: www.75409854.xyz
-  - &id014
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
-    type: vmess
-    server: sbl4.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 53701585-591f-48a3-9515-8831ed0524ac
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl4.shabijichang.com
-  - &id015
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: singapore.com
-    port: 80
-    cipher: auto
-    uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v003.ssrsub.com
-  - &id016
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
-    type: vmess
-    server: yd1.992688.xyz
-    port: 8880
-    cipher: auto
-    uuid: 2fc248d5-7c81-471d-c2cf-a14e7f5aed2d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: vceu3.vpn66.eu.org
-  - &id017
-    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗
-    type: vmess
-    server: cf.yx.alue.link
-    port: 2052
-    cipher: auto
-    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us.wx.alue.link
-  - &id018
-    name: 🇬🇧_GB_英国
-    type: ss
-    server: 198.244.231.25
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id019
     name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
     type: vmess
     server: fd.shabijichang.com
@@ -243,8 +20,117 @@ proxies:
       path: /
       headers:
         host: mrb.shabijichang.com
-  - &id020
-    name: 🇺🇸_US_美国_9
+  - &id002
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    type: vmess
+    server: lt1.992688.xyz
+    port: 8880
+    cipher: auto
+    uuid: 2fc248d5-7c81-471d-c2cf-a14e7f5aed2d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: vceu3.vpn66.eu.org
+  - &id003
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
+    type: vmess
+    server: dx1.992688.xyz
+    port: 8880
+    cipher: auto
+    uuid: 2fc248d5-7c81-471d-c2cf-a14e7f5aed2d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: vceu3.vpn66.eu.org
+  - &id004
+    name: 🇺🇸_US_美国_1
+    type: ss
+    server: 216.52.183.243
+    port: 1001
+    password: 83XvX4Vo%*3a
+    cipher: aes-128-gcm
+    plugin: v2ray-plugin
+    plugin-opts:
+      mode: websocket
+      path: /
+      mux: true
+  - &id005
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: cf.yx.alue.link
+    port: 2052
+    cipher: auto
+    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us.wx.alue.link
+  - &id006
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
+    type: vmess
+    server: yd1.992688.xyz
+    port: 8880
+    cipher: auto
+    uuid: 2fc248d5-7c81-471d-c2cf-a14e7f5aed2d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: vceu3.vpn66.eu.org
+  - &id007
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: ss
+    server: yidong.liulangdiqiu.cyou
+    port: 10706
+    password: 6fc1c0c5-9851-4b06-accd-77d422cf8385
+    cipher: chacha20-ietf-poly1305
+  - &id008
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
+    type: vmess
+    server: 45.199.138.191
+    port: 30000
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1696251522438
+      headers:
+        host: www.42077230.xyz
+  - &id009
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: cf-lt.sharecentre.online
+    port: 80
+    cipher: auto
+    uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v003.ssrsub.com
+  - &id010
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: 45.199.138.222
     port: 30000
@@ -256,15 +142,13 @@ proxies:
     network: ws
     ws-opts:
       path: /path/1696251693048
-      headers:
-        host: www.19229362.xyz
-  - &id021
-    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡
+  - &id011
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: 104.16.68.38
-    port: 2052
+    server: www.speedtest.net
+    port: 80
     cipher: auto
-    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
+    uuid: 62515af2-1dd9-467b-9dd3-774abefb6a62
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -272,7 +156,74 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: lu.wx.alue.link
+        host: hu1.xv2ray.net
+  - &id012
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 162.159.143.72
+    port: 80
+    cipher: auto
+    uuid: fab552f9-3c92-44ed-c086-08d631ee44ee
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: xui2.xuwu996.eu.org
+  - &id013
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: singapore.com
+    port: 80
+    cipher: auto
+    uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v002.ssrsub.com
+  - &id014
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: sbl3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 53701585-591f-48a3-9515-8831ed0524ac
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl3.shabijichang.com
+  - &id015
+    name: 🇺🇸_US_美国_9
+    type: ss
+    server: 155.248.198.71
+    port: 20800
+    password: f5d95005-be14-40fc-bedc-e4a1133a5701
+    cipher: chacha20-ietf-poly1305
+  - &id016
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
+    type: vmess
+    server: 104.17.88.252
+    port: 2082
+    cipher: auto
+    uuid: 6388bd92-6cbc-4b72-a9a6-931f071d0ffa
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /phosphorylative.aurorainiceland.com/nimvws
+      headers:
+        host: erfannewfreenodes.vdmmswyzmzigonvnjk443.workers.dev
 proxy-groups:
   - name: PROXY
     type: select
@@ -315,11 +266,6 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -341,11 +287,6 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
   - name: SELECT
     type: select
     proxies:
@@ -365,11 +306,6 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
