--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,17 +6,20 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: ss
-    server: 216.52.183.243
-    port: 1001
-    password: 83XvX4Vo%*3a
-    cipher: aes-128-gcm
-    plugin: v2ray-plugin
-    plugin-opts:
-      mode: websocket
-      path: /
-      mux: true
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    type: vmess
+    server: dx1.992688.xyz
+    port: 8880
+    cipher: auto
+    uuid: 2fc248d5-7c81-471d-c2cf-a14e7f5aed2d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: vceu3.vpn66.eu.org
   - &id002
     name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
     type: vmess
@@ -33,7 +36,19 @@ proxies:
       headers:
         host: mrb.shabijichang.com
   - &id003
-    name: 🇺🇸_US_美国_2
+    name: 🇺🇸_US_美国_1
+    type: ss
+    server: 216.52.183.243
+    port: 1001
+    password: 83XvX4Vo%*3a
+    cipher: aes-128-gcm
+    plugin: v2ray-plugin
+    plugin-opts:
+      mode: websocket
+      path: /
+      mux: true
+  - &id004
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
     server: yd1.992688.xyz
     port: 8880
@@ -47,102 +62,30 @@ proxies:
       path: /?ed=2048
       headers:
         host: vceu3.vpn66.eu.org
-  - &id004
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 5.161.191.195
-    port: 2083
-    cipher: auto
-    uuid: 1c5cd450-a5cc-4803-d0ef-1ea424cc4ba2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
   - &id005
-    name: 🇺🇸_US_美国_4
+    name: 🇭🇰_HK_香港->🇮🇱_IL_以色列
     type: vmess
-    server: 67.21.90.5
-    port: 443
+    server: 103.48.169.166
+    port: 57754
     cipher: auto
-    uuid: 28dd6c26-05a5-4bba-8a5d-052b70ac13b2
-    alterId: 64
+    uuid: a783230b-cd66-4492-9517-7f6cf569e1c9
+    alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /path/1694429908748
+      path: /vm?ed=2048
+      headers:
+        host: ylsl.kxking.eu.org
   - &id006
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: lax.asoul-diana.xyz
+    name: 🇬🇧_GB_英国_1
+    type: ss
+    server: 198.244.231.25
     port: 443
-    cipher: auto
-    uuid: 5f726fe3-d82e-4da5-a711-8af0cbb2b682
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /acetaffy
-      headers:
-        host: lax.asoul-diana.xyz
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id007
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: trojan
-    server: 14.18.106.137
-    port: 41929
-    udp: true
-    password: 09833a6f-4d46-426e-87fe-7793a5489f84
-    sni: nl01.lovehjq.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗
-    type: vmess
-    server: cf.yx.alue.link
-    port: 2052
-    cipher: auto
-    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us.wx.alue.link
-  - &id009
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: 112.29.156.248
-    port: 61001
-    cipher: auto
-    uuid: d531ebd3-64d7-3ccb-b49e-e2bfbdf70dfc
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /dabai.in
-      headers:
-        host: a.cn-db.top
-  - &id010
-    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡
-    type: vmess
-    server: 104.16.68.38
-    port: 2052
-    cipher: auto
-    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: lu.wx.alue.link
-  - &id011
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
     type: vmess
     server: lt1.992688.xyz
     port: 8880
@@ -156,76 +99,22 @@ proxies:
       path: /?ed=2048
       headers:
         host: vceu3.vpn66.eu.org
-  - &id012
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
-    type: vmess
-    server: 112.29.156.251
-    port: 61004
-    cipher: auto
-    uuid: d531ebd3-64d7-3ccb-b49e-e2bfbdf70dfc
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /dabai.in
-      headers:
-        host: a.db-link.in
-  - &id013
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: www.speedtest.net
-    port: 80
-    cipher: auto
-    uuid: 62515af2-1dd9-467b-9dd3-774abefb6a62
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: hu1.xv2ray.net
-  - &id014
-    name: 🇬🇧_GB_英国
-    type: ss
-    server: 89.185.84.178
-    port: 46135
-    password: iGZdlsmpNxy4QCGu2CJCKw
-    cipher: chacha20-ietf-poly1305
-  - &id015
-    name: 🇨🇿_CZ_捷克
-    type: vmess
-    server: 92.118.149.115
-    port: 25131
-    cipher: auto
-    uuid: ece8262a-141f-42f6-8dcf-e9b7a2028086
-    alterId: 0
-    tls: false
+  - &id008
+    name: 🇩🇪_DE_德国
+    type: trojan
+    server: 54.38.156.210
+    port: 443
+    udp: true
+    password: 1970a7f0-64c0-11ee-8afe-1239d0255272
     skip-cert-verify: true
     network: tcp
-  - &id016
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 162.159.143.72
-    port: 80
-    cipher: auto
-    uuid: fab552f9-3c92-44ed-c086-08d631ee44ee
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: xui2.xuwu996.eu.org
-  - &id017
-    name: 🇺🇸_US_美国_8
+  - &id009
+    name: 🇺🇸_US_美国_2
     type: vmess
     server: singapore.com
-    port: 80
+    port: 8080
     cipher: auto
-    uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c
+    uuid: d3f830a2-205a-4bba-a7ca-5e87899ac04d
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -233,36 +122,124 @@ proxies:
     ws-opts:
       path: /api/v3/download.getFile
       headers:
-        host: ssrsub.v002.ssrsub.com
-  - &id018
-    name: 🇺🇸_US_美国_9
-    type: ss
-    server: usshs2.gophers.gay
-    port: 20800
-    password: f5d95005-be14-40fc-bedc-e4a1133a5701
-    cipher: chacha20-ietf-poly1305
-  - &id019
-    name: 🇺🇸_US_美国_10
-    type: ss
-    server: 155.248.198.71
-    port: 20800
-    password: f5d95005-be14-40fc-bedc-e4a1133a5701
-    cipher: chacha20-ietf-poly1305
-  - &id020
-    name: 🇺🇸_US_美国_11
+        host: ssrsub.v01.ssrsub.com
+  - &id010
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
     type: vmess
-    server: 45.199.138.222
+    server: 45.199.138.191
     port: 30000
     cipher: auto
-    uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /path/1696251693048
+      path: /path/1696251522438
       headers:
-        host: www.19229362.xyz
+        host: www.42077230.xyz
+  - &id011
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 67.21.90.5
+    port: 443
+    cipher: auto
+    uuid: 28dd6c26-05a5-4bba-8a5d-052b70ac13b2
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1694429908748
+  - &id012
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: www.speedtest.net
+    port: 80
+    cipher: auto
+    uuid: bf75108e-7bec-4fe0-8db9-3d4985dd3bd6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: it1.xv2ray.net
+  - &id013
+    name: 🇹🇼_TW_台湾
+    type: vmess
+    server: 46caadb.f2.gladns.com
+    port: 3331
+    cipher: auto
+    uuid: 57e0cb4d-eae5-48ec-8091-149dc2b309e0
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /s/46caadb.fm.apple.com:60980
+      headers:
+        host: 46caadb.f2.gladns.com
+  - &id014
+    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡
+    type: vmess
+    server: 162.159.152.6
+    port: 2052
+    cipher: auto
+    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: lu.wx.alue.link
+  - &id015
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: cold-dawn-9246.fly.dev
+    port: 443
+    cipher: auto
+    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
+      headers:
+        host: cold-dawn-9246.fly.dev
+  - &id016
+    name: 🇬🇧_GB_英国_2
+    type: ss
+    server: ukld2.gophers.gay
+    port: 20600
+    password: f5d95005-be14-40fc-bedc-e4a1133a5701
+    cipher: chacha20-ietf-poly1305
+  - &id017
+    name: 🇸🇪_SE_瑞典
+    type: ss
+    server: 195.181.166.170
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id018
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
+    type: vmess
+    server: 45.199.138.152
+    port: 30000
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca4690dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1696598013851
+      headers:
+        host: www.32522178.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -307,8 +284,6 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
-      - *id019
-      - *id020
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -332,8 +307,6 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
-      - *id019
-      - *id020
   - name: SELECT
     type: select
     proxies:
@@ -355,8 +328,6 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
-      - *id019
-      - *id020
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
