--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,91 +6,229 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
-    type: vmess
-    server: dx1.992688.xyz
-    port: 8880
-    cipher: auto
-    uuid: 2fc248d5-7c81-471d-c2cf-a14e7f5aed2d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: vceu3.vpn66.eu.org
-  - &id002
-    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
-    type: vmess
-    server: fd.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 5e48a497-f4ae-4129-afd6-ba26d75b792a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mrb.shabijichang.com
-  - &id003
-    name: 🇺🇸_US_美国_1
+    name: 🇫🇷_FR_法国_1
     type: ss
-    server: 216.52.183.243
-    port: 1001
-    password: 83XvX4Vo%*3a
-    cipher: aes-128-gcm
-    plugin: v2ray-plugin
-    plugin-opts:
-      mode: websocket
-      path: /
-      mux: true
-  - &id004
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
-    type: vmess
-    server: yd1.992688.xyz
-    port: 8880
-    cipher: auto
-    uuid: 2fc248d5-7c81-471d-c2cf-a14e7f5aed2d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: vceu3.vpn66.eu.org
-  - &id005
-    name: 🇭🇰_HK_香港->🇮🇱_IL_以色列
-    type: vmess
-    server: 103.48.169.166
-    port: 57754
-    cipher: auto
-    uuid: a783230b-cd66-4492-9517-7f6cf569e1c9
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vm?ed=2048
-      headers:
-        host: ylsl.kxking.eu.org
-  - &id006
-    name: 🇬🇧_GB_英国_1
-    type: ss
-    server: 198.244.231.25
+    server: 141.95.99.192
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
+  - &id002
+    name: 🇫🇷_FR_法国_2
+    type: ss
+    server: 54.36.174.181
+    port: 5003
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id003
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 54.36.174.181
+    port: 8881
+    password: kDWvXYZoTBcGkC4
+    cipher: aes-256-gcm
+  - &id004
+    name: 🇫🇷_FR_法国_4
+    type: ss
+    server: 146.59.111.186
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id005
+    name: 🇫🇷_FR_法国_5
+    type: ss
+    server: 54.36.174.181
+    port: 5500
+    password: KixLvKzwjekG00rm
+    cipher: aes-256-gcm
+  - &id006
+    name: 🇫🇷_FR_法国_6
+    type: ss
+    server: 54.36.174.181
+    port: 8000
+    password: KixLvKzwjekG00rm
+    cipher: aes-256-gcm
   - &id007
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
+    name: 🇫🇷_FR_法国_7
+    type: ss
+    server: 54.36.174.181
+    port: 8080
+    password: KixLvKzwjekG00rm
+    cipher: aes-256-gcm
+  - &id008
+    name: 🇫🇷_FR_法国_8
+    type: ss
+    server: 54.36.174.181
+    port: 8090
+    password: PCnnH6SQSnfoS27
+    cipher: aes-256-gcm
+  - &id009
+    name: 🇫🇷_FR_法国_9
+    type: ss
+    server: 54.36.174.181
+    port: 8091
+    password: PCnnH6SQSnfoS27
+    cipher: aes-256-gcm
+  - &id010
+    name: 🇫🇷_FR_法国_10
+    type: ss
+    server: 54.36.174.181
+    port: 7001
+    password: RexnBgU7EV5ADxG
+    cipher: aes-256-gcm
+  - &id011
+    name: 🇫🇷_FR_法国_11
+    type: ss
+    server: 54.36.174.181
+    port: 7002
+    password: RexnBgU7EV5ADxG
+    cipher: aes-256-gcm
+  - &id012
+    name: 🇫🇷_FR_法国_12
+    type: ss
+    server: 54.36.174.181
+    port: 6697
+    password: TEzjfAYq2IjtuoS
+    cipher: aes-256-gcm
+  - &id013
+    name: 🇫🇷_FR_法国_13
+    type: ss
+    server: 54.36.174.181
+    port: 8008
+    password: XKFKl2rULjIp74
+    cipher: aes-256-gcm
+  - &id014
+    name: 🇫🇷_FR_法国_14
+    type: ss
+    server: 54.36.174.181
+    port: 8009
+    password: XKFKl2rULjIp74
+    cipher: aes-256-gcm
+  - &id015
+    name: 🇫🇷_FR_法国_15
+    type: ss
+    server: 54.36.174.181
+    port: 3306
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id016
+    name: 🇫🇷_FR_法国_16
+    type: ss
+    server: 54.36.174.181
+    port: 5000
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id017
+    name: 🇫🇷_FR_法国_17
+    type: ss
+    server: 54.36.174.181
+    port: 5001
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id018
+    name: 🇫🇷_FR_法国_18
+    type: ss
+    server: 54.36.174.181
+    port: 5600
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id019
+    name: 🇫🇷_FR_法国_19
+    type: ss
+    server: 54.36.174.181
+    port: 5601
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id020
+    name: 🇫🇷_FR_法国_20
+    type: ss
+    server: 54.36.174.181
+    port: 8118
+    password: cdBIDV42DCwnfIN
+    cipher: aes-256-gcm
+  - &id021
+    name: 🇫🇷_FR_法国_21
+    type: ss
+    server: 54.36.174.181
+    port: 9102
+    password: e4FCWrgpkji3QY
+    cipher: aes-256-gcm
+  - &id022
+    name: 🇫🇷_FR_法国_22
+    type: ss
+    server: 54.36.174.181
+    port: 2375
+    password: faBAoD54k87UJG7
+    cipher: aes-256-gcm
+  - &id023
+    name: 🇫🇷_FR_法国_23
+    type: ss
+    server: 54.36.174.181
+    port: 2376
+    password: faBAoD54k87UJG7
+    cipher: aes-256-gcm
+  - &id024
+    name: 🇫🇷_FR_法国_24
+    type: ss
+    server: 54.36.174.181
+    port: 5004
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id025
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    type: trojan
+    server: nl01.lovehjq.xyz
+    port: 41929
+    udp: true
+    password: 09833a6f-4d46-426e-87fe-7793a5489f84
+    skip-cert-verify: true
+    network: tcp
+  - &id026
+    name: 🇫🇷_FR_法国_25
+    type: ss
+    server: 54.36.174.181
+    port: 9101
+    password: e4FCWrgpkji3QY
+    cipher: aes-256-gcm
+  - &id027
+    name: 🇫🇷_FR_法国_26
+    type: trojan
+    server: 15.237.164.108
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    skip-cert-verify: true
+    network: tcp
+  - &id028
+    name: 🇫🇷_FR_法国_27
+    type: trojan
+    server: 13.37.41.30
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    skip-cert-verify: true
+    network: tcp
+  - &id029
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: lt1.992688.xyz
-    port: 8880
+    server: www.speedtest.net
+    port: 80
     cipher: auto
-    uuid: 2fc248d5-7c81-471d-c2cf-a14e7f5aed2d
+    uuid: 62515af2-1dd9-467b-9dd3-774abefb6a62
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: hu1.xv2ray.net
+  - &id030
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: usfhc4.gophers.gay
+    port: 20353
+    cipher: auto
+    uuid: 4b445dc7-3db7-4476-978a-1fb2a4d5c2b0
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -98,33 +236,50 @@ proxies:
     ws-opts:
       path: /?ed=2048
       headers:
-        host: vceu3.vpn66.eu.org
-  - &id008
-    name: 🇩🇪_DE_德国
-    type: trojan
-    server: 54.38.156.210
-    port: 443
-    udp: true
-    password: 1970a7f0-64c0-11ee-8afe-1239d0255272
+        host: microsoft.com
+  - &id031
+    name: 🇧🇬_BG_保加利亚
+    type: vmess
+    server: 91.215.152.210
+    port: 10590
+    cipher: auto
+    uuid: ec4061c4-d40d-45a9-be24-c4ac5d60c398
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: tcp
-  - &id009
-    name: 🇺🇸_US_美国_2
+  - &id032
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: singapore.com
+    server: 104.21.70.14
     port: 8080
     cipher: auto
-    uuid: d3f830a2-205a-4bba-a7ca-5e87899ac04d
+    uuid: 6735fcf0-7846-4259-bc31-f4f905a92750
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
+      path: /
       headers:
-        host: ssrsub.v01.ssrsub.com
-  - &id010
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
+        host: se1.xv2ray.net
+  - &id033
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: sdyg2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 53701585-591f-48a3-9515-8831ed0524ac
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sdyg2.shabijichang.com
+  - &id034
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
     type: vmess
     server: 45.199.138.191
     port: 30000
@@ -138,100 +293,13 @@ proxies:
       path: /path/1696251522438
       headers:
         host: www.42077230.xyz
-  - &id011
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 67.21.90.5
-    port: 443
-    cipher: auto
-    uuid: 28dd6c26-05a5-4bba-8a5d-052b70ac13b2
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1694429908748
-  - &id012
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: www.speedtest.net
-    port: 80
-    cipher: auto
-    uuid: bf75108e-7bec-4fe0-8db9-3d4985dd3bd6
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: it1.xv2ray.net
-  - &id013
-    name: 🇹🇼_TW_台湾
-    type: vmess
-    server: 46caadb.f2.gladns.com
-    port: 3331
-    cipher: auto
-    uuid: 57e0cb4d-eae5-48ec-8091-149dc2b309e0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /s/46caadb.fm.apple.com:60980
-      headers:
-        host: 46caadb.f2.gladns.com
-  - &id014
-    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡
-    type: vmess
-    server: 162.159.152.6
-    port: 2052
-    cipher: auto
-    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: lu.wx.alue.link
-  - &id015
+  - &id035
     name: 🇺🇸_US_美国_5
     type: vmess
-    server: cold-dawn-9246.fly.dev
-    port: 443
-    cipher: auto
-    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
-      headers:
-        host: cold-dawn-9246.fly.dev
-  - &id016
-    name: 🇬🇧_GB_英国_2
-    type: ss
-    server: ukld2.gophers.gay
-    port: 20600
-    password: f5d95005-be14-40fc-bedc-e4a1133a5701
-    cipher: chacha20-ietf-poly1305
-  - &id017
-    name: 🇸🇪_SE_瑞典
-    type: ss
-    server: 195.181.166.170
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id018
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
-    type: vmess
-    server: 45.199.138.152
+    server: 45.199.138.186
     port: 30000
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca4690dd24
+    uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf
     alterId: 64
     tls: true
     skip-cert-verify: true
@@ -239,7 +307,22 @@ proxies:
     ws-opts:
       path: /path/1696598013851
       headers:
-        host: www.32522178.xyz
+        host: www.19229362.xyz
+  - &id036
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+    type: vmess
+    server: mm3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 53701585-591f-48a3-9515-8831ed0524ac
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm3.shabijichang.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -284,6 +367,24 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -307,6 +408,24 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -328,6 +447,24 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
